# webrtc_tunnel

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  memory.md  memory_summary.md
.claude/agents/: lint-n-test.md
.claude/plans/: spec-audit-fixes.md
.githooks/: commit-msg
.github/: copilot-instructions.md  copilot-instructions.md~
.github/workflows/: ci.yml
android/: .editorconfig  README.md
android/app/: build.gradle.kts  detekt.yml
android/docs/: ANDROID_UIUX2_FOLLOWUP_SPEC.md  ANDROID_UIUX2_FOLLOWUP_TODO.md  P5_FORWARD_RUNTIME_STATUS_TODO.md  UIUX_IMPROVEMENTS1_TODO.md  UIUX_IMPROVEMENTS2_TODO.md  replies1.md
android/gradle/: libs.versions.toml
bins/p2p-answer/: Cargo.toml
bins/p2p-offer/: Cargo.toml
bins/p2p-offer/src/: main.rs
bins/p2pctl/: Cargo.toml
bins/p2pctl/src/: commands.rs  main.rs
bins/p2pctl/src/commands/: tests.rs
crates/p2p-core/: Cargo.toml  extract_items.py
crates/p2p-crypto/: Cargo.toml
crates/p2p-crypto/src/: authorized_keys.rs  crypto.rs  error.rs  identity.rs  lib.rs  public_identity.rs  util.rs
crates/p2p-crypto/tests/: crypto_roundtrip.rs  identity_parsing.rs  public_identity_parsing.rs
crates/p2p-daemon/: Cargo.toml
crates/p2p-daemon/src/: busy.rs  config.rs  error.rs  lib.rs  logging.rs  messages.rs  notify.rs  predicates.rs  process_signal.rs  shutdown.rs  signaling.rs  status.rs  tests.rs  types.rs
crates/p2p-daemon/src/answer/: mod.rs  payload.rs  runtime.rs  session.rs  test_support.rs
crates/p2p-daemon/src/offer/: accept.rs  mod.rs  runtime.rs  test_support.rs  tests.rs
crates/p2p-daemon/src/offer/session/: inbound.rs  mod.rs  reconnect.rs
crates/p2p-daemon/src/status/: atomic.rs  mod.rs  tests.rs  types.rs  writer.rs
crates/p2p-daemon/src/tests/: answer_admission.rs  answer_registry.rs  answer_routing.rs  busy_offer.rs  canonical_docs.rs  config_and_idle.rs  duplicate_reack.rs  mod.rs  reconnect.rs  runtime_phase.rs  session_lifecycle.rs  status_and_recovery.rs  support.rs
crates/p2p-daemon/tests/: launchd_plist_tests.rs  process_signal_shutdown.rs  real_broker_tunnel.rs  two_node_daemon.rs
crates/p2p-daemon/tests/two_node_daemon/: answer_drain_publish_barrier_tests.rs  answer_post_payload_shutdown_gate_tests.rs  answer_session_real_panic_tests.rs  isolation_tests.rs  lifecycle_regression_tests.rs  offer_loop_top_shutdown_gate_tests.rs  shutdown_tests.rs  worker_supervision_tests.rs
crates/p2p-daemon/tests/two_node_daemon/harness/: config.rs  session.rs  status.rs  transport.rs
crates/p2p-daemon/tests/two_node_daemon/stream_tests/: concurrent_peers.rs  fault_isolation.rs  mod.rs  single_pair.rs
crates/p2p-mobile/: Cargo.toml
crates/p2p-mobile/src/: c_abi.rs  diagnostics.rs  jni_bridge.rs  lib.rs  runtime.rs  tests.rs
crates/p2p-mobile/src/runtime/: log_bridge.rs  mod.rs  state.rs  tests.rs  types.rs  validate.rs
crates/p2p-mobile/tests/: tracing_install_failure.rs
crates/p2p-signaling/: Cargo.toml
crates/p2p-signaling/src/: ack.rs  envelope.rs  error.rs  lib.rs  messages.rs  replay.rs  transport.rs
crates/p2p-signaling/src/transport/: codec.rs  mod.rs  mqtt.rs  tests.rs
crates/p2p-signaling/src/transport/tests/: codec.rs  mqtt_options.rs
crates/p2p-signaling/tests/: mock_mqtt_roundtrip.rs  timestamp_and_replay.rs
crates/p2p-tunnel/: Cargo.toml  extract_items.py
crates/p2p-tunnel/src/: answer.rs  bridge.rs  error.rs  frame.rs  lib.rs  multiplex.rs  offer.rs
crates/p2p-tunnel/src/multiplex/: answer.rs  mod.rs  offer.rs  state.rs  stream.rs  tests.rs
crates/p2p-tunnel/src/multiplex/tests/: answer_frames.rs  end_to_end.rs  mod.rs  offer_frames.rs  state.rs  stream_runtime.rs  support.rs
crates/p2p-tunnel/tests/: answer_frame_handling.rs
crates/p2p-webrtc/: Cargo.toml
crates/p2p-webrtc/src/: data_channel.rs  error.rs  ice.rs  lib.rs  peer.rs
docs/: ANDROID_BUILD.md  ANDROID_E2E_VALIDATION_CLEANUP_TODO.md  ANDROID_FINAL_HARDENING_TODO.md  ANDROID_FINAL_PATCH_TODO.md  ANDROID_FIX_TODO1.md  ANDROID_FIX_TODO_2.md  ANDROID_FIX_TODO_3.md  ANDROID_LIFECYCLE_STATUS_HARDENING_TODO.md  ANDROID_P2P_ANSWER_DATACHANNEL_DEBUG_SPEC.md  ANDROID_P2P_ANSWER_DATACHANNEL_DEBUG_TODO.md  ANDROID_UI_CODE_REVIEW2.md  ANDROID_UI_CODE_REVIEW3.md  ANDROID_UI_FIX_TODO2.md  ANDROID_UI_FIX_TODO3.md  ANDROID_UI_FIX_TODO4.md  ANDROID_UI_FIX_TODO5.md  ANDROID_UI_SCREEN_SPEC.md  ANDROID_VALIDATION.md  ANDROID_WEBRTC_EMULATOR_DATA_PLANE_SPEC.md  ANDROID_WEBRTC_EMULATOR_DATA_PLANE_TODO.md  ANDROID_WEBRTC_TUNNEL_SPEC.md  ANDROID_WEBRTC_TUNNEL_TODO.md  DEBIAN_PACKAGING.md  DOCKER_TESTS1_TODO.md  INT_TEST2_TODO.md  INT_TEST3_TODO.md  LAUNCHD.md  MACOS_PACKAGING.md  MULTIPLEXED_FORWARDING_CODE_REVIEW2.md  MULTIPLEXED_FORWARDING_FIX2_TODO.md  MULTIPLEXED_FORWARDING_FIX3_TODO.md  MULTIPLEXED_FORWARDING_FIX_TODO.md  MULTIPLEXED_FORWARDING_SPEC.md  MULTIPLEXED_FORWARDING_TODO.md  RUST_WEBRTC_CODE_REVIEW1_TODO.md  RUST_WEBRTC_CODE_REVIEW2_TODO.md  RUST_WEBRTC_CODE_REVIEW3_TODO.md  RUST_WEBRTC_SPECS.md  RUST_WEBRTC_TODO.md  SPECS.md  (+90 more)
docs/archive/: ANDROID_CODE_REVIEW1.md  ANDROID_E2E_VALIDATION_CLEANUP_TODO.md  ANDROID_FINAL_HARDENING_SPEC.md  ANDROID_FINAL_HARDENING_TODO.md  ANDROID_FINAL_PATCH_SPEC.md  ANDROID_FIX_SPEC_2.md  ANDROID_FIX_SPEC_3.md  ANDROID_FIX_TODO1.md  ANDROID_FIX_TODO_3.md  ANDROID_LIFECYCLE_STATUS_HARDENING_SPEC.md  ANDROID_STATUS_IO_HARDENING_FOLLOWUP_SPEC.md  ANDROID_STATUS_IO_HARDENING_FOLLOWUP_TODO.md  ANDROID_TINY_FINAL_PATCH_TODO.md  ANDROID_UI_CODE_REVIEW4.md  ANDROID_UI_CODE_REVIEW5.md  ANDROID_UI_FIX_TODO2.md  ANDROID_UI_FIX_TODO3.md  ANDROID_UI_FIX_TODO4.md  ANDROID_UI_POLISH_SPEC.md  ANDROID_UI_POLISH_TODO.md  ANDROID_USER_GUIDE.md  ANDROID_VALIDATION.md  ANDROID_WEBRTC_TUNNEL_TODO.md  DOCKER_TESTS1_TODO.md  INT_TEST1_TODO.md  MULTIPLEXED_FORWARDING_CODE_REVIEW.md  MULTIPLEXED_FORWARDING_CODE_REVIEW3.md  MULTIPLEXED_FORWARDING_SPEC.md  MULTIPLEXED_FORWARDING_TODO.md  (+33 more)
scripts/: build-deb.sh  build-macos-pkg.sh  check-launchd-plists.sh  check-systemd-units.sh  install-launchd-services.sh  install-systemd-services.sh  test-debian-package.sh  test-launchd-install-layout.sh
(+206 files in other folders)
