[package]
name = "p2p-offer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
p2p-core = { path = "../../crates/p2p-core" }
p2p-crypto = { path = "../../crates/p2p-crypto" }
p2p-daemon = { path = "../../crates/p2p-daemon" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
# See crates/p2p-daemon/src/notify.rs and docs/SYSTEMD.md ("Type=notify").
sd-notify = ["p2p-daemon/sd-notify"]

[lints]
workspace = true
