[package]
name = "p2pctl"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
p2p-core = { path = "../../crates/p2p-core" }
p2p-crypto = { path = "../../crates/p2p-crypto" }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3.19.1"

[lints]
workspace = true
