[package]
name = "p2p-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
p2p-core = { path = "../p2p-core" }
base64.workspace = true
chacha20poly1305.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
hkdf.workspace = true
rand_core.workspace = true
secrecy.workspace = true
serde.workspace = true
sha2.workspace = true
thiserror.workspace = true
toml.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true

[dev-dependencies]
tempfile = "3.19.1"

[lints]
workspace = true
