[package]
name = "p2p-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
p2p-core = { path = "../p2p-core" }
p2p-crypto = { path = "../p2p-crypto" }
p2p-signaling = { path = "../p2p-signaling" }
p2p-tunnel = { path = "../p2p-tunnel" }
p2p-webrtc = { path = "../p2p-webrtc" }
rand_core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true

[dev-dependencies]
plist = "1.8.0"
rcgen = "0.14.7"
tempfile = "3.27.0"
