[package]
name = "p2p-signaling"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
p2p-core = { path = "../p2p-core" }
p2p-crypto = { path = "../p2p-crypto" }
bytes.workspace = true
rumqttc.workspace = true
serde.workspace = true
serde_cbor.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
rand_core.workspace = true

[lints]
workspace = true
