[package]
name = "p2p-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
p2p-core = { path = "../p2p-core" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
