[package]
name = "p2p-tunnel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
bytes.workspace = true
p2p-core = { path = "../p2p-core" }
p2p-webrtc = { path = "../p2p-webrtc" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
